--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ruiduoyi"
     android:versionCode="3"
-    android:versionName="3.0.0.9">
-    <!--13-->
+    android:versionName="3.0.1.3"
+    android:persistent="true">
+
+    <!-- 13 -->
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -153,7 +155,13 @@
             android:launchMode="singleTop"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Dialog" />
-        <activity android:name=".activity.Dialog.DialogMxbgActivity"
+        <activity
+            android:name=".activity.Dialog.DialogMxbgActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity
+            android:name=".activity.Dialog.DialogSgjlActivity"
             android:launchMode="singleTop"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Dialog"></activity>
